--- a/qt_design/main_window.ui
+++ b/qt_design/main_window.ui
@@ -1696,12 +1696,12 @@ QR_CODE</string>
         <x>0</x>
         <y>0</y>
         <width>781</width>
-        <height>421</height>
+        <height>449</height>
        </rect>
       </property>
       <layout class="QVBoxLayout" name="mainVerticalLayout">
        <item>
-        <widget class="QTabWidget" name="settingsTab">
+        <widget class="TabWidget" name="settingsTab">
          <property name="enabled">
           <bool>true</bool>
          </property>
@@ -1733,7 +1733,7 @@ color:darkgrey
 </string>
          </property>
          <property name="tabPosition">
-          <enum>QTabWidget::North</enum>
+          <enum>QTabWidget::West</enum>
          </property>
          <property name="tabShape">
           <enum>QTabWidget::Rounded</enum>
@@ -5691,6 +5691,14 @@ Countdown</string>
    </widget>
   </widget>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>TabWidget</class>
+   <extends>QTabWidget</extends>
+   <header>tabwidget.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <tabstops>
   <tabstop>settingsTab</tabstop>
   <tabstop>passcodeEnterLineEdit</tabstop>
