--- a/qt_design/main_window.ui
+++ b/qt_design/main_window.ui
@@ -58,7 +58,7 @@
        <string notr="true"/>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>2</number>
       </property>
       <widget class="QWidget" name="homePage">
        <layout class="QGridLayout" name="gridLayout_4">
@@ -1224,13 +1224,13 @@ color:darkgrey
 </string>
           </property>
           <property name="tabPosition">
-           <enum>QTabWidget::South</enum>
+           <enum>QTabWidget::North</enum>
           </property>
           <property name="tabShape">
            <enum>QTabWidget::Rounded</enum>
           </property>
           <property name="currentIndex">
-           <number>2</number>
+           <number>7</number>
           </property>
           <property name="iconSize">
            <size>
@@ -1913,7 +1913,7 @@ QScrollBar::sub-line:vertical {
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>691</width>
+                 <width>707</width>
                  <height>399</height>
                 </rect>
                </property>
@@ -3120,8 +3120,8 @@ QScrollBar::sub-line:vertical {
                <property name="geometry">
                 <rect>
                  <x>0</x>
-                 <y>-231</y>
-                 <width>691</width>
+                 <y>0</y>
+                 <width>707</width>
                  <height>560</height>
                 </rect>
                </property>
@@ -3963,9 +3963,9 @@ color:white;
             </item>
            </layout>
           </widget>
-          <widget class="QWidget" name="manual">
+          <widget class="QWidget" name="help">
            <attribute name="title">
-            <string>Manual</string>
+            <string>Help!</string>
            </attribute>
            <layout class="QVBoxLayout" name="verticalLayout_20">
             <item>
