--- a/qt_design/main_window.ui
+++ b/qt_design/main_window.ui
@@ -57,8 +57,11 @@
       <property name="styleSheet">
        <string notr="true"/>
       </property>
+      <property name="frameShape">
+       <enum>QFrame::NoFrame</enum>
+      </property>
       <property name="currentIndex">
-       <number>2</number>
+       <number>3</number>
       </property>
       <widget class="QWidget" name="homePage">
        <layout class="QGridLayout" name="gridLayout_4">
@@ -1170,8 +1173,8 @@ QR_CODE</string>
        </layout>
       </widget>
       <widget class="QWidget" name="settingsPage">
-       <layout class="QVBoxLayout" name="verticalLayout_2">
-        <item>
+       <layout class="QGridLayout" name="gridLayout_15">
+        <item row="0" column="0">
          <widget class="QTabWidget" name="settingsTab">
           <property name="enabled">
            <bool>true</bool>
@@ -1222,7 +1225,7 @@ color:darkgrey
            <enum>QTabWidget::Rounded</enum>
           </property>
           <property name="currentIndex">
-           <number>3</number>
+           <number>7</number>
           </property>
           <property name="iconSize">
            <size>
@@ -4187,7 +4190,7 @@ li.checked::marker { content: &quot;\2612&quot;; }
              </font>
             </property>
             <property name="styleSheet">
-             <string notr="true">color: white; background-color: rgb(50,50,50); border-radius:3px;border-color: rgb(50,50,50);border-width: 1px;border-style: solid;
+             <string notr="true">color: white; background-color: rgb(50,50,50); border-radius:3px;border-color: green;border-width: 1px;border-style: solid;
 </string>
             </property>
             <property name="text">
@@ -4216,7 +4219,7 @@ li.checked::marker { content: &quot;\2612&quot;; }
              </font>
             </property>
             <property name="styleSheet">
-             <string notr="true">color: white; background-color: rgb(50,50,50); border-radius:3px;border-color: rgb(50,50,50);border-width: 1px;border-style: solid;
+             <string notr="true">color: white; background-color: rgb(50,50,50); border-radius:3px;border-color: green;border-width: 1px;border-style: solid;
 </string>
             </property>
             <property name="text">
@@ -4268,8 +4271,8 @@ li.checked::marker { content: &quot;\2612&quot;; }
              <string notr="true">color:white</string>
             </property>
             <property name="text">
-             <string>If you do not know the passcode,
-enter your phone number to get it.</string>
+             <string>FOR PARAMEDICS:
+Enter your phone number to get passcode.</string>
             </property>
             <property name="buddy">
              <cstring>paramedicsPhoneNumberLineEdit</cstring>
@@ -4309,7 +4312,7 @@ enter your phone number to get it.</string>
              </font>
             </property>
             <property name="styleSheet">
-             <string notr="true">color: white; background-color: rgb(50,50,50); border-radius:3px;border-color: rgb(50,50,50);border-width: 1px;border-style: solid;
+             <string notr="true">color: white; background-color: rgb(50,50,50); border-radius:3px;border-color: red;border-width: 1px;border-style: solid;
 </string>
             </property>
            </widget>
@@ -4368,7 +4371,7 @@ Format the phone number as &quot;+1XXXXXXXXXX&quot;</string>
              </font>
             </property>
             <property name="styleSheet">
-             <string notr="true">color: white; background-color: rgb(50,50,50); border-radius:3px;border-color: rgb(50,50,50);border-width: 1px;border-style: solid;
+             <string notr="true">color: white; background-color: rgb(50,50,50); border-radius:3px;border-color: red;border-width: 1px;border-style: solid;
 </string>
             </property>
             <property name="text">
@@ -4407,7 +4410,7 @@ Format the phone number as &quot;+1XXXXXXXXXX&quot;</string>
              <string notr="true">color:white</string>
             </property>
             <property name="text">
-             <string>If you forgot the passcode</string>
+             <string>FOR ADMIN ONLY:</string>
             </property>
             <property name="buddy">
              <cstring>forgotPasswordPushButton</cstring>
@@ -4458,17 +4461,62 @@ Format the phone number as &quot;+1XXXXXXXXXX&quot;</string>
          </layout>
         </item>
         <item>
-         <spacer name="verticalSpacer_2">
+         <widget class="Line" name="line_3">
+          <property name="styleSheet">
+           <string notr="true">color:rgb(50,50,50)</string>
+          </property>
+          <property name="frameShadow">
+           <enum>QFrame::Plain</enum>
+          </property>
           <property name="orientation">
-           <enum>Qt::Vertical</enum>
+           <enum>Qt::Horizontal</enum>
           </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>20</width>
-            <height>40</height>
-           </size>
+         </widget>
+        </item>
+        <item>
+         <widget class="QTextEdit" name="passcodeManual">
+          <property name="styleSheet">
+           <string notr="true">QScrollBar {
+        background: rgb(50,50,50);
+        border-radius: 3px;
+        border-color:rgb(50,50,50);
+        width:10
+    }
+QScrollBar::handle:vertical
+    {
+        background-color: rgb(65,65,65);
+        border-radius: 3px;
+    }
+QScrollBar::add-line:vertical {
+      border: none;
+      background: none;
+}
+
+QScrollBar::sub-line:vertical {
+      border: none;
+      background: none;
+}QTextEdit {
+	background-color: black;
+	color: white;
+}</string>
           </property>
-         </spacer>
+          <property name="frameShadow">
+           <enum>QFrame::Sunken</enum>
+          </property>
+          <property name="html">
+           <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;meta charset=&quot;utf-8&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+hr { height: 1px; border-width: 0; }
+li.unchecked::marker { content: &quot;\2610&quot;; }
+li.checked::marker { content: &quot;\2612&quot;; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'.AppleSystemUIFont'; font-size:13pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;MANUAL&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+          </property>
+          <property name="textInteractionFlags">
+           <set>Qt::NoTextInteraction</set>
+          </property>
+         </widget>
         </item>
        </layout>
       </widget>
@@ -5263,7 +5311,7 @@ color:darkgrey;border-radius:3px;border-color: rgb(20,20,20);border-width: 1px;b
          </font>
         </property>
         <property name="styleSheet">
-         <string notr="true">QPushButton:enabled{color: white; background-color: rgb(50,50,50); border-radius:3px;border-color: rgb(50,50,50);border-width: 1px;border-style: solid;}
+         <string notr="true">QPushButton:enabled{color: white; background-color: rgb(50,50,50); border-radius:3px;border-color: red;border-width: 1px;border-style: solid;}
 
 QPushButton:disabled {
 background-color: rgb(20,20,20);
