--- a/qt_design/main_window.ui
+++ b/qt_design/main_window.ui
@@ -66,7 +66,7 @@
        <number>1</number>
       </property>
       <property name="currentIndex">
-       <number>3</number>
+       <number>2</number>
       </property>
       <widget class="QWidget" name="homePage">
        <layout class="QGridLayout" name="gridLayout_4">
@@ -1179,7 +1179,7 @@ QR_CODE</string>
       </widget>
       <widget class="QWidget" name="settingsPage">
        <layout class="QGridLayout" name="gridLayout_15">
-        <item row="1" column="0">
+        <item row="0" column="0">
          <widget class="QTabWidget" name="settingsTab">
           <property name="enabled">
            <bool>true</bool>
@@ -1201,13 +1201,11 @@ QR_CODE</string>
             <pointsize>16</pointsize>
            </font>
           </property>
-          <property name="whatsThis">
-           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-          </property>
           <property name="styleSheet">
            <string notr="true">QTabWidget::tab-bar {
 alignment: center;
 }
+QTabWidget::pane{border-radius: 0px;border-color:rgb(50,50,50);border-width: 1px;border-style: solid;}
 QTabBar::tab:selected {
 background: rgb(90,90,90);
 color:white;
@@ -1229,7 +1227,7 @@ color:darkgrey
            <enum>QTabWidget::Rounded</enum>
           </property>
           <property name="currentIndex">
-           <number>6</number>
+           <number>1</number>
           </property>
           <property name="iconSize">
            <size>
@@ -1351,7 +1349,7 @@ QScrollBar::sub-line:vertical {
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>710</width>
+                 <width>714</width>
                  <height>395</height>
                 </rect>
                </property>
@@ -1618,8 +1616,8 @@ QScrollBar::sub-line:vertical {
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>720</width>
-                 <height>325</height>
+                 <width>724</width>
+                 <height>338</height>
                 </rect>
                </property>
                <layout class="QVBoxLayout" name="verticalLayout_12">
@@ -1720,6 +1718,9 @@ QScrollBar::sub-line:vertical {
                      </property>
                      <property name="alignment">
                       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+                     </property>
+                     <property name="wordWrap">
+                      <bool>false</bool>
                      </property>
                     </widget>
                    </item>
@@ -1987,8 +1988,8 @@ QScrollBar::sub-line:vertical {
                <property name="geometry">
                 <rect>
                  <x>0</x>
-                 <y>0</y>
-                 <width>712</width>
+                 <y>-94</y>
+                 <width>716</width>
                  <height>434</height>
                 </rect>
                </property>
@@ -2292,7 +2293,7 @@ QScrollBar::sub-line:vertical {
                     <widget class="QLabel" name="twilioAddressWarning">
                      <property name="font">
                       <font>
-                       <pointsize>13</pointsize>
+                       <pointsize>16</pointsize>
                       </font>
                      </property>
                      <property name="styleSheet">
@@ -2377,8 +2378,8 @@ QScrollBar::sub-line:vertical {
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>720</width>
-                 <height>325</height>
+                 <width>724</width>
+                 <height>338</height>
                 </rect>
                </property>
                <layout class="QVBoxLayout" name="verticalLayout_14">
@@ -2739,7 +2740,7 @@ QScrollBar::sub-line:vertical {
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>710</width>
+                 <width>714</width>
                  <height>383</height>
                 </rect>
                </property>
@@ -3313,8 +3314,8 @@ QScrollBar::sub-line:vertical {
                <property name="geometry">
                 <rect>
                  <x>0</x>
-                 <y>-385</y>
-                 <width>712</width>
+                 <y>0</y>
+                 <width>716</width>
                  <height>712</height>
                 </rect>
                </property>
@@ -4360,7 +4361,61 @@ li.checked::marker { content: &quot;\2612&quot;; }
              <enum>QFrame::Raised</enum>
             </property>
             <layout class="QGridLayout" name="gridLayout_17">
-             <item row="1" column="2">
+             <item row="0" column="1" colspan="2">
+              <widget class="QLabel" name="paramedicsLabel">
+               <property name="font">
+                <font>
+                 <pointsize>16</pointsize>
+                </font>
+               </property>
+               <property name="styleSheet">
+                <string notr="true">color:white</string>
+               </property>
+               <property name="text">
+                <string>FOR PARAMEDICS:</string>
+               </property>
+               <property name="buddy">
+                <cstring>paramedicsPhoneNumberLineEdit</cstring>
+               </property>
+              </widget>
+             </item>
+             <item row="3" column="1" colspan="2">
+              <widget class="QLabel" name="label_20">
+               <property name="styleSheet">
+                <string notr="true">color:yellow</string>
+               </property>
+               <property name="text">
+                <string>Warning: Format phone number as &quot;+1XXXXXXXXXX&quot;.
+The phone number will be recorded.</string>
+               </property>
+              </widget>
+             </item>
+             <item row="2" column="1">
+              <widget class="QLineEdit" name="paramedicsPhoneNumberLineEdit">
+               <property name="minimumSize">
+                <size>
+                 <width>200</width>
+                 <height>30</height>
+                </size>
+               </property>
+               <property name="maximumSize">
+                <size>
+                 <width>200</width>
+                 <height>30</height>
+                </size>
+               </property>
+               <property name="font">
+                <font>
+                 <pointsize>16</pointsize>
+                </font>
+               </property>
+               <property name="styleSheet">
+                <string notr="true">color: white; background-color: rgb(50,50,50); border-radius:3px;border-color: red;border-width: 1px;border-style: solid;
+</string>
+               </property>
+              </widget>
+             </item>
+             <item row="2" column="2">
               <widget class="QPushButton" name="getPasscodePushButton">
                <property name="minimumSize">
                 <size>
@@ -4385,60 +4440,6 @@ li.checked::marker { content: &quot;\2612&quot;; }
                </property>
                <property name="text">
                 <string>Get Passcode</string>
-               </property>
-              </widget>
-             </item>
-             <item row="0" column="1" colspan="2">
-              <widget class="QLabel" name="paramedicsLabel">
-               <property name="font">
-                <font>
-                 <pointsize>16</pointsize>
-                </font>
-               </property>
-               <property name="styleSheet">
-                <string notr="true">color:white</string>
-               </property>
-               <property name="text">
-                <string>FOR PARAMEDICS:</string>
-               </property>
-               <property name="buddy">
-                <cstring>paramedicsPhoneNumberLineEdit</cstring>
-               </property>
-              </widget>
-             </item>
-             <item row="2" column="1" colspan="2">
-              <widget class="QLabel" name="label_20">
-               <property name="styleSheet">
-                <string notr="true">color:yellow</string>
-               </property>
-               <property name="text">
-                <string>Warning: Format phone number as &quot;+1XXXXXXXXXX&quot;.
-The phone number will be recorded.</string>
-               </property>
-              </widget>
-             </item>
-             <item row="1" column="1">
-              <widget class="QLineEdit" name="paramedicsPhoneNumberLineEdit">
-               <property name="minimumSize">
-                <size>
-                 <width>200</width>
-                 <height>30</height>
-                </size>
-               </property>
-               <property name="maximumSize">
-                <size>
-                 <width>200</width>
-                 <height>30</height>
-                </size>
-               </property>
-               <property name="font">
-                <font>
-                 <pointsize>16</pointsize>
-                </font>
-               </property>
-               <property name="styleSheet">
-                <string notr="true">color: white; background-color: rgb(50,50,50); border-radius:3px;border-color: red;border-width: 1px;border-style: solid;
-</string>
                </property>
               </widget>
              </item>
@@ -4495,7 +4496,59 @@ The phone number will be recorded.</string>
            <enum>QFrame::Raised</enum>
           </property>
           <layout class="QGridLayout" name="gridLayout_19">
-           <item row="1" column="1">
+           <item row="0" column="0" colspan="2">
+            <widget class="QLabel" name="passcodeEnterLabel">
+             <property name="font">
+              <font>
+               <pointsize>24</pointsize>
+              </font>
+             </property>
+             <property name="styleSheet">
+              <string notr="true">color:white</string>
+             </property>
+             <property name="text">
+              <string>Enter Passcode</string>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignCenter</set>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="0">
+            <widget class="QLineEdit" name="passcodeEnterLineEdit">
+             <property name="minimumSize">
+              <size>
+               <width>200</width>
+               <height>30</height>
+              </size>
+             </property>
+             <property name="maximumSize">
+              <size>
+               <width>200</width>
+               <height>30</height>
+              </size>
+             </property>
+             <property name="font">
+              <font>
+               <pointsize>16</pointsize>
+              </font>
+             </property>
+             <property name="styleSheet">
+              <string notr="true">color: white; background-color: rgb(50,50,50); border-radius:3px;border-color: green;border-width: 1px;border-style: solid;
+</string>
+             </property>
+             <property name="text">
+              <string/>
+             </property>
+             <property name="echoMode">
+              <enum>QLineEdit::Password</enum>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignCenter</set>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="1">
             <widget class="QPushButton" name="passcodeEnterPushButton">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
@@ -4527,58 +4580,6 @@ The phone number will be recorded.</string>
              </property>
              <property name="text">
               <string>Unlock</string>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="0" colspan="2">
-            <widget class="QLabel" name="passcodeEnterLabel">
-             <property name="font">
-              <font>
-               <pointsize>24</pointsize>
-              </font>
-             </property>
-             <property name="styleSheet">
-              <string notr="true">color:white</string>
-             </property>
-             <property name="text">
-              <string>Enter Passcode</string>
-             </property>
-             <property name="alignment">
-              <set>Qt::AlignCenter</set>
-             </property>
-            </widget>
-           </item>
-           <item row="1" column="0">
-            <widget class="QLineEdit" name="passcodeEnterLineEdit">
-             <property name="minimumSize">
-              <size>
-               <width>200</width>
-               <height>30</height>
-              </size>
-             </property>
-             <property name="maximumSize">
-              <size>
-               <width>200</width>
-               <height>30</height>
-              </size>
-             </property>
-             <property name="font">
-              <font>
-               <pointsize>16</pointsize>
-              </font>
-             </property>
-             <property name="styleSheet">
-              <string notr="true">color: white; background-color: rgb(50,50,50); border-radius:3px;border-color: green;border-width: 1px;border-style: solid;
-</string>
-             </property>
-             <property name="text">
-              <string/>
-             </property>
-             <property name="echoMode">
-              <enum>QLineEdit::Password</enum>
-             </property>
-             <property name="alignment">
-              <set>Qt::AlignCenter</set>
              </property>
             </widget>
            </item>
@@ -5464,7 +5465,7 @@ color:darkgrey;border-radius:3px;border-color: rgb(20,20,20);border-width: 1px;b
           </font>
          </property>
          <property name="styleSheet">
-          <string notr="true">QPushButton:enabled{color: white; background-color: rgb(50,50,50); border-radius:3px;border-color: white;border-width: 1px;border-style: solid;}
+          <string notr="true">QPushButton:enabled{color: white; background-color: rgb(50,50,50); border-radius:3px;border-color: grey;border-width: 1px;border-style: solid;}
 
 QPushButton:disabled {
 background-color: rgb(20,20,20);
